all hio boards dt and configs added

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -389,6 +389,16 @@ dtb-$(CONFIG_SOC_IMX6Q) += \
 	imx6dl-sabreauto-gpmi-weim.dtb \
 	imx6dl-sabrelite.dtb \
 	imx6dl-sabresd.dtb \
+	hio-imx6dl-board.dtb \
+	hio-imx6dl-emb1200.dtb \
+	hio-imx6dl-iob3200.dtb \
+	hio-imx6dl-ppc4510.dtb \
+	hio-imx6dl-ppc4215.dtb \
+	hio-imx6dl-emb2230.dtb \
+	hio-imx6dl-ppc4207.dtb \
+	hio-imx6dl-ppc4210.dtb \
+	hio-imx6q-iob3200.dtb \
+	hio-imx6q-emb2230.dtb \
 	imx6dl-sabresd-btwifi.dtb \
 	imx6dl-sabresd-hdcp.dtb \
 	imx6dl-sabresd-ldo.dtb \
