--- a/drivers/gpio/Kconfig
+++ b/drivers/gpio/Kconfig
@@ -348,6 +348,34 @@ config GPIO_MXC
 	select GPIO_GENERIC
 	select GENERIC_IRQ_CHIP
 
+config GPIO_PPC_4510
+    bool "ppc-4510 GPIO support"
+    depends on ARCH_MXC
+    select GENERIC_IRQ_CHIP
+    help
+      Say yes here to support the ppc-4510 GPIO device
+
+config GPIO_PPC_4515
+    bool "ppc-4515 GPIO support"
+    depends on ARCH_MXC
+    select GENERIC_IRQ_CHIP
+    help
+      Say yes here to support the ppc-4515 GPIO device
+
+config GPIO_EMB2230
+    bool "emb-2230 GPIO support"
+    depends on ARCH_MXC
+    select GENERIC_IRQ_CHIP
+    help
+      Say yes here to support the emb-2230 GPIO device
+
+config GPIO_IOB3200
+    bool "iob-3200 GPIO support"
+    depends on ARCH_MXC
+    select GENERIC_IRQ_CHIP
+    help
+      Say yes here to support the iob-3200 GPIO device
+	  
 config GPIO_MXS
 	def_bool y
 	depends on ARCH_MXS
