--- a/sound/soc/fsl/Kconfig
+++ b/sound/soc/fsl/Kconfig
@@ -407,6 +407,19 @@ config SND_SOC_IMX_WM8962_ANDROID
 	  Say Y if you want to add support for SoC audio on an i.MX board with
 	  a wm8962 codec in android.
 
+config SND_SOC_IMX_TLV320AIC3X
+	tristate "SoC Audio support for i.MX boards with tlv320aic3x"
+	depends on OF && I2C
+	select SND_SOC_WM8962
+	select SND_SOC_TLV320AIC3X
+	select SND_SOC_IMX_PCM_DMA
+	select SND_SOC_IMX_AUDMUX
+	select SND_SOC_FSL_SSI
+	select SND_SOC_FSL_UTILS
+	help
+	  Say Y if you want to add support for SoC audio on an i.MX board with
+	  a tlv320aic3x codec.
+	  
 config SND_SOC_IMX_MICFIL
 	tristate "SoC Audio support for i.MX boards with micfil"
 	depends on OF && I2C
@@ -517,6 +530,7 @@ config SND_SOC_IMX_SI476X
 	  SoC Audio support for i.MX boards with SI476x
 	  Say Y if you want to add support for Soc audio for the AMFM Tuner chip
 	  SI476x module.
+      
 
 config SND_SOC_IMX_HDMI
 	tristate "SoC Audio support for i.MX boards with HDMI port"
@@ -566,6 +580,32 @@ config SND_SOC_IMX_PDM_MIC
 	  SoC Audio support for i.MX boards with PDM microphones on SAI
 	  Say Y if you want to add support for SoC Audio support for i.MX boards
 	  with PDM microphones on SAI.
+
+#ADD rt5631 codec
+config SND_SOC_IMX_RT5631
+    tristate "SoC Audio support for i.MX boards with rt5631"
+    depends on OF && I2C
+    select SND_SOC_IMX_PCM_DMA
+    select SND_SOC_IMX_AUDMUX
+    select SND_SOC_FSL_SSI
+    select SND_SOC_FSL_UTILS
+    select SND_SOC_RT5631
+    help
+      Say Y if you want to add support for SoC audio on an i.MX board with
+      a rt5631 codec.	
+
+#ADD rt5640 codec
+config SND_SOC_IMX_RT5640
+    tristate "SoC Audio support for i.MX boards with rt5640"
+    depends on OF && I2C
+    select SND_SOC_IMX_PCM_DMA
+    select SND_SOC_IMX_AUDMUX
+    select SND_SOC_FSL_SSI
+    select SND_SOC_FSL_UTILS
+    select SND_SOC_RT5640
+    help
+      Say Y if you want to add support for SoC audio on an i.MX board with
+      a rt5640 codec.
 
 endif # SND_IMX_SOC
 
