--- a/drivers/input/touchscreen/Makefile
+++ b/drivers/input/touchscreen/Makefile
@@ -106,5 +106,12 @@ obj-$(CONFIG_TOUCHSCREEN_SX8654)	+= sx8654.o
 obj-$(CONFIG_TOUCHSCREEN_TPS6507X)	+= tps6507x-ts.o
 obj-$(CONFIG_TOUCHSCREEN_ZET6223)	+= zet6223.o
 obj-$(CONFIG_TOUCHSCREEN_ZFORCE)	+= zforce_ts.o
+obj-$(CONFIG_TOUCHSCREEN_VTL_CT36X)             += GT9xx/
+obj-$(CONFIG_TOUCHSCREEN_GT9xx)             	+= emb2230_GT9xx/
+obj-$(CONFIG_TOUCHSCREEN_PPC4207_GT9xx)         += ppc4207_GT9xx/ 
+obj-$(CONFIG_TOUCHSCREEN_VTL_CT36X)             += vtl_ts/
+#obj-$(CONFIG_TOUCHSCREEN_PPC4215_ILI2511)		+= ILI2511/
+obj-$(CONFIG_TOUCHSCREEN_PPC4215_GT9xx)			+= ppc4215_GT9xx/
+obj-$(CONFIG_TOUCHSCREEN_PPC4210_Ilitek)		+= ppc4210_ilitek/
 obj-$(CONFIG_TOUCHSCREEN_COLIBRI_VF50)	+= colibri-vf50-ts.o
 obj-$(CONFIG_TOUCHSCREEN_ROHM_BU21023)	+= rohm_bu21023.o
