kernel 4.14 change fixes

--- a/arch/arm/boot/dts/hio-imx6q-emb2230.dtsi
+++ b/arch/arm/boot/dts/hio-imx6q-emb2230.dtsi
@@ -11,6 +11,7 @@
  */
 
 #include <dt-bindings/input/input.h>
+#include <dt-bindings/gpio/gpio.h>
 
 / {
 	aliases {
@@ -501,7 +502,7 @@
 	pinctrl-0 = <&pinctrl_i2c2>;
 	status = "okay";
 
-	hdmi: edid@50 {
+	hdmi_edid: edid@50 {
 		compatible = "fsl,imx6-hdmi-i2c";
 		reg = <0x50>;
 	};
@@ -1341,7 +1342,7 @@
     pinctrl-0 = <&pinctrl_uart5_1>;
 };
 
-&flexcan1 {
+&can1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_can1>;
 	status = "okay";
