--- a/arch/arm/boot/dts/imx6qdl.dtsi
+++ b/arch/arm/boot/dts/imx6qdl.dtsi
@@ -87,10 +87,12 @@
 		interrupt-parent = <&gpc>;
 		ranges;
 
+		#if 0
 		caam_sm: caam-sm@00100000 {
 			compatible = "fsl,imx6q-caam-sm";
 			reg = <0x00100000 0x4000>;
 		};
+		#endif
 
 		dma_apbh: dma-apbh@00110000 {
 			compatible = "fsl,imx6q-dma-apbh", "fsl,imx28-dma-apbh";
@@ -856,10 +858,12 @@
 				clock-names = "main_clk";
 			};
 
+			#if 0
 			caam_snvs: caam-snvs@020cc000 {
 				compatible = "fsl,imx6q-caam-snvs";
 				reg = <0x020cc000 0x4000>;
 			};
+			#endif
 
 			snvs: snvs@020cc000 {
 				compatible = "fsl,sec-v4.0-mon", "syscon", "simple-mfd";
@@ -1041,7 +1045,8 @@
 			#size-cells = <1>;
 			reg = <0x02100000 0x100000>;
 			ranges;
-
+			
+			#if 0
 			crypto: caam@2100000 {
 				compatible = "fsl,sec-v4.0";
 				#address-cells = <1>;
@@ -1076,7 +1081,7 @@
 					interrupts = <GIC_SPI 106 IRQ_TYPE_LEVEL_HIGH>;
 				};
 			};
-
+			#endif
 			aipstz@0217c000 { /* AIPSTZ2 */
 				reg = <0x0217c000 0x4000>;
 			};
